<resources>
    <string name="app_name">Try This Trail</string>

    <string name="button_start">Inicio</string>
    <string name="button_end">Fin</string>
    <string name="action_settings">Configuración</string>
    <string name="action_sync">Sincronizar</string>
    <string name="title_activity_menu_principal">Menu Principal</string>

    <string name="text_distancia">kms</string>
    <string name="text_tiempo">hrs</string>
    <string name="text_oficial">Ruta Oficial</string>
    <string name="text_no_oficial">No Oficial</string>

    <string name="title_section0">Inicio</string>
    <string name="title_section1">Visualizar Mapa</string>
    <string name="title_section2">Planificar Viaje</string>
    <string name="title_section3">Crear Ruta</string>
    <string name="title_section4">Iniciar Recorrido</string>
    <string name="title_section5">Iniciar Sesion</string>
    <string name="title_section6">Perfil</string>
    <string name="title_section7">Cerrar Sesion</string>
    <string-array name="Tags">
        <item>Inicio</item>
        <item>Visualizar Mapa</item>
        <item>Planificar Viaje</item>
        <item>Crear Ruta</item>
        <item>Iniciar Rec</item>
        <item>Iniciar Sesion</item>
        <item>Perfil</item>
        <item>Cerrar Sesion</item>
    </string-array>


    <string name="rec_prompt">Como recorrio la ruta?</string>
    <string name="rec_prompt_region">Regiones</string>
    <string name="button_aceptar_eliminar_ruta">Aceptar</string>
    <string name="button_cancelar_eliminar_ruta">Cancelar</string>

    <string name="action_edit">Editar</string>
    <string name="action_delet">Eliminar</string>
    <string name="action_fav">Favorita</string>

    <string name="trail_caminando">Caminando</string>
    <string name="trail_trotando">Trotando</string>
    <string name="trail_corriendo">Corriendo</string>
    <string name="trail_bicicleta">Bicicleta</string>
    <string name="trail_caballo">Caballo</string>
    <string name="trail_auto">Auto</string>
    <string name="title_home_i">Bienvenido</string>
    <string name="title_home_ii">a</string>
<!-- Login String-->
    <string name="title_Login">Inicio Sesion</string>
    <string name="title_Try_This_Trail">Try This Trail</string>
    <string name="title_register">Registro</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_confirmation">Confirmar Contraseña</string>
    <string name="hint_name">Nombre de usuario</string>
    <string name="btn_login">Inicio Sesion</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_link_to_register">Registrarse</string>
    <string name="btn_link_to_remember">No recuerdas tu cuenta?</string>
    <string name="btn_link_to_login">Ya estas registrado!? ve al Inicio Sesion.</string>
    <string name="btn_invitado">Ingresar como invitado</string>
    <string name="welcome">Bienvenido</string>
    <string name="btn_logout">Cerrar Sesion</string>
    <string name="name">Nombre</string>
    <string name="attempts_Left">Intentos restantes</string>
    <string name="alert_btn_login_bloqued">Inicio Sesion BLOCKEADO!!!</string>

<!--Crear Ruta-->
    <string name="title_crear_ruta">Datos para la ruta</string>
    <string name="recorrido_mediante">Recorrido mediante</string>
    <string name="region_detalles">Region</string>
    <string name="nombre_ruta">Nombre de la Ruta</string>
    <string name="nombre_region">Region de la ruta</string>
    <string name="tiempo_estimado">Tiempo Estimado</string>
    <string name="distacia_recorrida">Distancia Recorrida (km)</string>
    <string name="descripcion_ruta">Descripcion</string>
    <string name="button_guardar_ruta">Guardar</string>
    <string name="button_cancelar_ruta">Cancelar</string>
<!--Eliminar ruta-->
    <string name="title_eliminar_ruta">Datos de la ruta a Eliminar</string>

    <string name="noInternet">No hay conexión a internet</string>
    <string name="rutaLocal">Ruta guardada de manera local</string>
    <string name="sincronizadas">Rutas sincronizadas exitosamente</string>

    <string name="errorEmpty">No puede ser vacío</string>
    <string name="errorSpaces">No puede tener espacios</string>
    <string name="errorFormat">No tiene un formato válido</string>
    <string name="passwordError">La contraseña debe ser de al menos 6 caracteres y contener al menos 1 número y una letra</string>
    <string name="passwordErrorLogin">Recuerda que el MINIMO eran 6 caracreres</string>

    <string name="passwordConfirmationError">La contraseña debe ser iguales</string>
    <string name="toast_rute_start">La ruta ya comenzo a grabarse</string>
    <string name="toast_rute_end">Primero inicie un Ruta</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main2">Main2Activity</string>

<!-- Configuracion -->
    <string name="radio_Español"> Español </string>
    <string name="radio_Ingles"> Ingles </string>
    <string name="radio_Mapudungun"> Mapudungun </string>
    <string name="btn_cambiar_idioma"> Aceptar </string>
    <string name="btn_cancelar_idioma"> Cancelar </string>
    <string name="seleccion_idioma">Seleccione el idioma</string>
    <string name="title_configuracion">Configuración</string>

    <string name="title_perfil">Perfil del Usuario</string>
    <string name="button_guardar_perfil">Aceptar</string>
    <string name="button_cancelar_perfil">Cancelar</string>
    <string name="hint_old_password_confirmation">Contraseña actual</string>
    <string name="hint_new_password">Nueva Contraseña</string>
    <string name="correo_usuario">Correo</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="nueva_contraseña_usuario">Cambiar contraseña?</string>
    <string name="passwordOld">Debes ingresar la contraseña actual</string>
    <string name="title_fin_recorrido">Detalles al final del recorrido</string>
    <string name="tiempo_recorrido_inicio">Hora de inicio</string>
    <string name="tiempo_recorrido_fin">Hora de Termino</string>
    <string name="tiempo_recorrido">Tiempo total del recorrido</string>
    <string name="button_aceptar_detalles_fin">Aceptar</string>


</resources>
