<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewPerfil"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:scrollbars="none" >
    <RelativeLayout
        android:orientation="horizontal"
        android:background="@color/bg_ruta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/linLayoutPerfil1" >

            <TextView
                android:text="@string/title_perfil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/textviewTitlePerfil"
                android:textSize="35dp"
                android:textColor="@color/txt_title_register"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/correo_usuario"
                android:id="@+id/textViewPerfil_correo_usuario" />
            <TextView
                android:id="@+id/emailPerfil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="20sp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nombre_usuario"
                android:id="@+id/textViewPerfil_nombre_usuario" />
            <EditText
                android:id="@+id/namePerfil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nueva_contraseña_usuario"
                android:id="@+id/textViewPerfil_nueva_contraseña_usuario" />
            <EditText
                android:id="@+id/newPasswordPerfil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
            <EditText
                android:id="@+id/newPasswordConfirmPerfil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_password_confirmation"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
            <EditText
                android:id="@+id/oldPasswordPerfil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_old_password_confirmation"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:id="@+id/linLayoutPerfil2"
            android:layout_below="@id/linLayoutPerfil1"
            android:orientation="horizontal">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn_orange"
                android:textColor="@color/white"
                android:text="@string/button_guardar_perfil"
                android:id="@+id/button_guardar_perfil"
                android:layout_weight="1"
                android:layout_marginRight="2dip"
                />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn_orange"
                android:textColor="@color/white"
                android:text="@string/button_cancelar_perfil"
                android:id="@+id/button_cancelar_perfil"
                android:layout_weight="1" />
        </LinearLayout>

</RelativeLayout>
</ScrollView>