<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/bg_ruta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_crear_ruta"
            android:id="@+id/textViewName"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginBottom="10dip"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/recorrido_mediante"
            android:id="@+id/textView_recorrido_mediante" />
        <Spinner
            android:id="@+id/spinner_recorrido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_edit_text"
            android:textColor="@color/into_edit_text"
            android:prompt="@string/rec_prompt" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nombre_ruta"
            android:id="@+id/textView_nombre_ruta" />

        <EditText
            android:id="@+id/editText_nombre_ruta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_edit_text"
            android:textColor="@color/into_edit_text"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tiempo_estimado"
            android:id="@+id/textView_tiempo_estimado" />

        <EditText
            android:id="@+id/editTextiempo_estimado"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_edit_text"
            android:textColor="@color/into_edit_text"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="datetime"
            android:enabled="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/distacia_recorrida"
            android:id="@+id/textView_distancia_recorrida" />
        <EditText
            android:id="@+id/editText_distancia_recorrida"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_edit_text"
            android:textColor="@color/into_edit_text"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="number"
            android:enabled="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/descripcion_ruta"
            android:id="@+id/textView_descripcion" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_descripcion"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_edit_text"
            android:textColor="@color/into_edit_text"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_orange"
            android:textColor="@color/white"
            android:text="@string/button_guardar_ruta"
            android:id="@+id/button_guardar_ruta"
            android:layout_marginRight="2dip"
            android:layout_weight="1"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_orange"
            android:textColor="@color/white"
            android:text="@string/button_cancelar_ruta"
            android:layout_marginLeft="2dip"
            android:id="@+id/button_cancelar_ruta"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>