<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/c">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_home_i"
            android:id="@+id/textViewHomeI"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="35sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_home_ii"
            android:id="@+id/textViewHomeII"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="35sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_Try_This_Trail"
            android:id="@+id/textViewName"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="35sp"/>
    </LinearLayout>

</RelativeLayout>